--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "SinchonRhapsody";
-  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/2503@1.0/SinchonRhapsody.woff2")
+  font-family: "OKDDUNG";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-02@1.0/OKDDUNG.woff2")
     format("woff2");
   font-weight: normal;
   font-style: normal;
@@ -300,6 +300,7 @@ body {
 
 /* 主标题区域 */
 .title-section {
+  font-family: "OKDDUNG";
   position: fixed;
   top: 0;
   left: 0;
@@ -336,6 +337,17 @@ body {
 
 /* 下方内容区域 */
 .content-section {
+  position: relative;
+  min-height: 200vh;
+  background: white;
+  z-index: 20;
+  padding: 100px 0;
+  margin-top: 100vh;
+  transform: translateY(100vh);
+  transition: none;
+}
+
+.content-folder {
   position: relative;
   min-height: 200vh;
   background: white;
